--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "isogame",
-  "version": "1.0.0",
-  "description": "",
+  "name": "pixijs-webpack-starter",
+  "version": "1.1.0",
+  "description": "A Pixi.js starter kit with webpack and ES6",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Samir Lachgar",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-glslify": "^1.0.2",
+    "babel-runtime": "^6.11.6",
+    "brfs": "^1.4.3",
+    "glslify": "^5.1.0",
+    "transform-loader": "^0.2.3",
     "install": "^0.8.1",
     "json-loader": "^0.5.4",
     "npm": "^3.10.7",
@@ -21,11 +27,6 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
-    "babel-plugin-glslify": "^1.0.2",
-    "babel-runtime": "^6.11.6",
-    "brfs": "^1.4.3",
-    "glslify": "^5.1.0",
-    "pixi.js": "^4.0.1",
-    "transform-loader": "^0.2.3"
+    "pixi.js": "^4.1.0"
   }
 }
